Bug #17043: Casting trimmed string to decimal loses precision   Results of string functions were being converted to decimals by first   being converted to integers, resulting in a loss of precision.